styles, custom logo, currency input

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,110 @@
+$accent: #52d4d0;
+$dark: #1a1a1a;
 .App {
-  padding: 0 1em;
+  padding-top: 100px;
+  margin: auto;
 }
-$accent: green;
+.container {
+  max-width: 1400px;
+  padding: 0 2em;
+  margin: auto;
+}
+.page-header {
+  background-color: $dark;
+  border-bottom: 5px solid $accent;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+  top: 0;
+  .logo {
+    display: block;
+    width: 74px;
+    height: 74px;
+    // margin: 0.5rem;
+  }
+}
+
+h1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: normal;
+}
 
 .table-saskaitos {
-  width: 100%;
-  max-width: fit-content;
-  margin: 2em 0;
+  margin: 2em auto;
   border-collapse: collapse;
-  th,
+  min-width: 800px;
+  margin-bottom: 3em;
+  tr {
+    margin: 0.5em;
+  }
+  th {
+    color: #1d1f1f;
+    background-color: $accent;
+    font-weight: normal;
+    text-transform: uppercase;
+  }
+  th {
+    width: min-content;
+    padding: 0.5em;
+  }
+
   td {
-    padding: 0.3em 1em;
+    padding: 0 0.5em;
     text-align: left;
-    border-bottom: 1px solid $accent;
+    button {
+      &.red {
+        float: right;
+      }
+    }
+
+    input {
+      padding: 0.5em 1em;
+      // border-radius: 5px;
+    }
+  }
+}
+.new-account {
+  width: fit-content;
+  margin: auto;
+  .new-account-form {
+    max-width: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    div {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      label {
+        flex: 1;
+        margin-right: 1em;
+      }
+      input {
+        flex: 1;
+        padding: 0.3em;
+        font-size: 1em;
+      }
+    }
+  }
+}
+button {
+  padding: 0.5em 1em;
+  background-color: inherit;
+  border: none;
+  font-weight: bold;
+  margin: 0.1em;
+  cursor: pointer;
+  &.red {
+    color: red;
+    border: 1px solid red;
+  }
+  &.orange {
+    color: rgb(228, 149, 21);
+    border: 1px solid orange;
+  }
+  &.green {
+    color: green;
+    border: 1px solid green;
   }
 }
