basic messages component

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -4,6 +4,7 @@
 @import "./Accounts.scss";
 @import "./AddAccount.scss";
 @import "./Footer.scss";
+@import "./Messages.scss";
 * {
   margin: 0;
   padding: 0;
