--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -3,7 +3,7 @@ $dark: #0d2149;
 $darkest: #0c090d;
 $green: #00804b;
 $light: #f9ebe0;
-$orange: #fc6608;
+$orange: #ff5500;
 $red: #ef2906;
 $margin-large: 2.5rem;
 
@@ -34,7 +34,7 @@ button {
 }
 button:hover,
 button:focus {
-  background-color: #0d214925;
+  background-color: #053f6b61;
   &.green {
     background-color: rgba(0, 128, 0, 0.315);
   }
@@ -42,6 +42,6 @@ button:focus {
     background-color: rgba(255, 0, 0, 0.317);
   }
   &.orange {
-    background-color: rgba(255, 166, 0, 0.308);
+    background-color: rgba(255, 102, 0, 0.308);
   }
 }
