--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -31,6 +31,12 @@ button {
     color: $green;
     border-color: $green;
   }
+  &.disabled {
+    pointer-events: none;
+    color: rgb(126, 123, 123);
+    border-color: rgb(130, 127, 127);
+    background-color: rgba(128, 128, 128, 0.248);
+  }
 }
 button:hover,
 button:focus {
