fixed messages initial expanded

--- a/src/assets/scss/Messages.scss
+++ b/src/assets/scss/Messages.scss
@@ -8,7 +8,7 @@
   align-items: stretch;
   justify-content: flex-end;
   transition: all 2s;
-  // overflow: hidden;
+  overflow: hidden;
   box-shadow: -1px 1px 3px rgba(2, 66, 126, 0.693);
   background-color: $dark;
   // z-index: 1;
