--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -14,5 +14,8 @@ body {
   font-family: "Roboto Condensed", sans-serif;
   background-color: $accent;
   color: $darkest;
+  height: 100%;
+  min-height: 100%;
+  position: relative;
 }
 // @import "./Header.scss";
