--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -2,7 +2,8 @@
   padding-top: 6.5rem;
   margin: auto;
   background-color: $accent;
-  min-height: 100vh;
+  min-height: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
