--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -2,7 +2,7 @@
   padding-top: 6.5rem;
   margin: auto;
   background-color: $accent;
-  min-height: 100%;
+  min-height: 100vh;
   height: 100%;
   display: flex;
   flex-direction: column;
