--- a/src/assets/scss/AddAccount.scss
+++ b/src/assets/scss/AddAccount.scss
@@ -2,7 +2,8 @@
   width: fit-content;
   min-width: 280px;
   border-top: 5px solid $dark;
-  padding-top: 1em;
+  background-color: $light;
+  padding: 1em;
   margin: auto;
   margin-bottom: $margin-large;
   h2 {
