--- a/src/assets/scss/Messages.scss
+++ b/src/assets/scss/Messages.scss
@@ -5,6 +5,7 @@
   height: 5em;
   max-width: fit-content;
   overflow: hidden;
+  z-index: 49;
   .controls {
     position: absolute;
     bottom: 3px;
