--- a/src/assets/scss/Accounts.scss
+++ b/src/assets/scss/Accounts.scss
@@ -3,28 +3,28 @@
   max-width: fit-content;
   min-width: 836px;
   margin: auto;
-  .main {
-    position: relative;
-    z-index: 1;
+  .top {
+    width: 100%;
+    display: flex;
+    padding: 1em;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1em;
+    margin-bottom: $margin-large;
+    border-top: 5px solid $light;
+    background-color: $dark;
   }
   .open-btn {
-    position: absolute;
     background-color: $dark;
-    top: 1.8rem;
-    right: 0;
+    &:hover,
+    &:focus {
+      background-color: $accent;
+    }
   }
   .info {
     width: fit-content;
-    min-width: 280px;
-    padding: 1em;
-    margin: auto;
-    margin-bottom: $margin-large;
     background-color: $dark;
     color: $light;
-    border-top: 5px solid $light;
-    &.left {
-      margin-left: 0;
-    }
     .info-header {
       color: $accent;
       font-weight: bold;
@@ -94,6 +94,7 @@
 
         &.red {
           float: right;
+          margin: 0.5em;
         }
       }
 
@@ -198,6 +199,9 @@
             width: 100%;
             margin-left: -1.2em;
             height: 100%;
+            &.red {
+              margin: 0;
+            }
           }
         }
       }
